kubernetes/apps/flux-system/flux-instance/app/ingressroute.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/traefik.io/ingressroute_v1alpha1.json
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: &app flux-instance
  labels:
    app.kubernetes.io/name: *app
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`flux.${domain}.${tld}`) && PathPrefix(`/hook`)
      kind: Rule
      services:
        - kind: Service
          name: webhook-receiver
          port: 80
